Fixed Dark Mode issues

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -47,7 +47,7 @@ nav {
 
 #moon-icon {
     position: relative;
-    right: 70%;
+    right: 77%;
     font-size: 25px;
     z-index: 10;
 }
@@ -73,7 +73,7 @@ nav li {
     font-size: 20px;
     text-align: center;
     padding: 15px 0px;
-    width: 120px;
+    width: 150px;
 }
 
 nav a {
@@ -84,7 +84,6 @@ nav a {
 nav li:hover {
     background-color: cornflowerblue; 
     transition: all 0.2s ease-in;
-    width: 125px;
     cursor: pointer;
 }
 
@@ -104,18 +103,20 @@ nav li:hover {
 }
 
 .name-title button {  
-    height: 50px;
-    width: 110px;
+    padding: 20px 0px;
+    width: 140px;
+    font-size: 20px;
     background: black;
     color: white;
     border-radius: 100px;
     outline: none;
     border: none;
     text-align: center;
+    font-family: 'Nunito', sans-serif;
 }
 
 .name-title button:hover {
-    background-color: cornflowerblue;
+    background-color: cornflowerblue !important;
 }
 
 .name-title button a {
@@ -123,9 +124,15 @@ nav li:hover {
     color: white;
 }
 
+.name-title button a:active {
+    background-color: white;
+    color: black;
+}
+
 .name-title + p {
     font-size: 25px;
     line-height: 40px;
+    text-align: center;
 }
 
 .card {
@@ -221,7 +228,7 @@ nav li:hover {
 }
 
 .project-title {
-    grid-column: 1 / 4;
+    grid-area: services;
     padding-top: 30px;
     padding-left: 10%;
     line-height: 25px;
@@ -237,7 +244,7 @@ nav li:hover {
 .projects > div ~ p {
     display: block;
     text-align: start;
-    padding-left: 30%;
+    padding-left: 25%;
     font-size: 25px;
 }
 
@@ -314,8 +321,13 @@ nav li:hover {
 }
 
 .footer-content #mail {
-    padding: 30px; 
+    padding: 30px 30px 0px 30px; 
     margin-top: 10px;
+}
+
+.footer-content #mail i {
+    padding-right: 20px;
+    font-size: 24px;
 }
 
 .footer-content .social-media {
@@ -377,6 +389,8 @@ nav li:hover {
     font-size: 17px;
     padding: 20px;
     margin-top: 10px;
+    border-radius: 20px; 
+    border: 1px solid black;
 }
 
 .formstyle textarea {
@@ -388,31 +402,33 @@ nav li:hover {
     margin-top: 5px;
     padding: 15px;
     word-wrap: break-word;
+    border-radius: 20px;
 }
 
 #sendmsg {
     margin-top: 10px;
-    padding: 10px;
+    padding: 20px;
     width: 30%;
     background: black;
     color: white;
     border: none;
     outline: none;
-    border-radius: 2px;
+    border-radius: 30px;
     font-size: 17px;
     margin-left: 30%;
+    font-family: 'Nunito', sans-serif;
 }
 
 #sendmsg:active {
-    background: white;
+    background: red;
     color: black;
 }
 
 #sendmsg:hover {
-    background: gray;
-    color: black;
-    transition: all 0.2s ease-in;
-    border: 1px solid black;
+    background: cornflowerblue !important;
+    color: black !important;
+    transition: all 0.2s ease-in !important;
+    border: 1px solid black !important;
 }
 
 ul.sidenav { 
@@ -451,23 +467,29 @@ ul.sidenav li {
     nav li:hover {
         width: 87px;
     }
+    
      .content {
-        padding: 0px 20px 0px 30px;
+        padding: 0px 15px 0px 30px;
     }
 
     .project-title {
-        padding: 30px 20px 0px 0px;
+        padding: 30px 15px 0px 0px;
         padding-left: 5%;
     }
 
     .services {
         padding-left: 5%;
-        padding-right: 20px;
+        padding-right: 15px;
     }
 
     .name-title {
         font-size: 50px;
         padding-top: 15%;
+    }
+    
+    #moon-icon {
+        position: relative;
+        right: 58%;
     }
 }
 
@@ -531,14 +553,14 @@ ul.sidenav li {
 
     #moon-icon {
         position: relative;
-        right: 25%;
+        right: 20%;
     }
 }
 
 @media (min-width: 1050px) {
     .name-title {
         width: 100%;
-        padding: 10% 0px 40px 0px;
+        padding: 18% 0px 40px 0px;
         font-size: 70px;
         text-align: center;
     }
